--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+#ignoring windows, mac and linux folders
+windows
+mac
+linux
+
+#ignoring windows, mac and linux folders
+windows
+mac
+linux
